Remove standard configure constants from public headers
- Rename the header managed by autoheader to config.h.
- Only #include config.h from flint.h when building flint itself, not
  when flint.h is sourced by another program.
- Otherwise, include flint-config.h, which now contains only a subset of
  the definitions present in config.h (namely, the FLINT_* constants,
  as opposed to generic stuff like PACKAGE_NAME that would conflict with
  other packages).

--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,9 @@
 *.ppm
 */.deps/*
 src/fmpz/fmpz.c
-src/flint-config.h
+src/config.h
 src/fft_tuning.h
+src/flint-config.h
 build/
 config.log
 /Makefile
