--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -30,6 +30,9 @@ jobs:
             echo "diff=true" >> $GITHUB_OUTPUT
           fi
 
+      - name: Install TeX Live
+        uses: zauguin/install-texlive@v2
+
       - name: "Setup"
         if: success() && steps.check_doc_changes.outputs.diff == 'true'
         run: |
@@ -42,11 +45,24 @@ jobs:
           cd doc
           make html SPHINXOPTS="-W -j auto"
 
+      - name: "Build documentation"
+        if: success() && steps.check_doc_changes.outputs.diff == 'true'
+        run: |
+          cd doc
+          make html SPHINXOPTS="-W -j auto"
+
+      - name: "Build pdf documentation"
+        if: success() && steps.check_doc_changes.outputs.diff == 'true'
+        run: |
+          cd doc
+          make latex SPHINXOPTS="-W -j auto"
+
       - name: "Create a tarball of the documentation"
         if: success() && steps.check_doc_changes.outputs.diff == 'true'
         run: |
           cd doc/build
           mv html doc
+          mv latex/Flint.pdf doc
           tar -czvf doc.tar.gz doc
 
       - name: "Setup SSH key"
